--- a/InclassW10/InclassW10/InclassW10.csproj
+++ b/InclassW10/InclassW10/InclassW10.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="8.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\IShape\IShape.csproj" />
   </ItemGroup>
 
