--- a/InclassW10/InclassW10/InclassW10.csproj
+++ b/InclassW10/InclassW10/InclassW10.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="DevExpress.Data" Version="23.2.5" />
     <PackageReference Include="System.Drawing.Common" Version="8.0.4" />
   </ItemGroup>
 
